--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "This project implements a simple authentication and autherization using 'koa' library",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js --watch",
+    "dev": "node --watch --watch-preserve-output index.js",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.14.1"
+    "@koa/router": "^12.0.0",
+    "koa": "^2.14.1",
+    "koa-bodyparser": "^4.4.0"
+  },
+  "engines": {
+    "node": ">=18.11.0"
   }
 }
