--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/router": "^12.0.0",
-    "koa": "^2.14.1",
-    "koa-bodyparser": "^4.4.0"
+    "@koa/router": "12.0.0",
+    "date-fns": "2.29.3",
+    "dotenv": "16.0.3",
+    "jwt-simple": "0.5.6",
+    "koa": "2.14.1",
+    "koa-bodyparser": "4.4.0"
   },
   "engines": {
     "node": ">=18.11.0"
