--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "wouter": "2.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
