--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch --watch-preserve-output index.js",
+    "ui:install": "cd ui && npm i",
+    "ui:build": "cd ui && npm run build",
     "start": "node index.js"
   },
   "keywords": [],
@@ -16,7 +18,9 @@
     "dotenv": "16.0.3",
     "jwt-simple": "0.5.6",
     "koa": "2.14.1",
-    "koa-bodyparser": "4.4.0"
+    "koa-bodyparser": "4.4.0",
+    "koa-mount": "4.0.0",
+    "koa-static": "5.0.0"
   },
   "engines": {
     "node": ">=18.11.0"
